# swagger.yml
@@ -253,39 +253,6 @@ paths:
           schema:
             type: string
             description: operation was successful
-  /todo:
-    get:
-      operationId: getTodos
-      responses:
-        200:
-          description: Get all todos
-          schema:
-            type: array
-            description: array of all the todos
-            items:
-              $ref: "#/definitions/todo"
-        400:
-          description: Incomplete data
-          schema:
-            type: string
-            description: Body of the request was Incomplete
-    post:
-      operationId: createTodo
-      parameters:
-        - name: body
-          in: body
-          schema:
-            $ref: '#/definitions/todo'
-      responses:
-        200:
-          description: Created todo
-          schema:
-            $ref: "#/definitions/todo"
-        400:
-          description: Incomplete data
-          schema:
-            type: string
-            description: Body of the request was Incomplete
   /todo/{todoId}:
     delete:
       operationId: deleteTodo
